[gd_scene load_steps=24 format=1]

[ext_resource path="res://game/game.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/kenvector_future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/misc/safe_zone.png" type="Texture" id=3]
[ext_resource path="res://assets/misc/shield_bar.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/asteroid_explode1.wav" type="Sample" id=5]
[ext_resource path="res://assets/sounds/asteroid_explode2.wav" type="Sample" id=6]
[ext_resource path="res://assets/sounds/asteroid_explode3.wav" type="Sample" id=7]
[ext_resource path="res://assets/sounds/player_explode1.wav" type="Sample" id=8]
[ext_resource path="res://assets/sounds/player_explode3.wav" type="Sample" id=9]
[ext_resource path="res://assets/sounds/player_explode2.wav" type="Sample" id=10]
[ext_resource path="res://assets/sounds/power_up.wav" type="Sample" id=11]
[ext_resource path="res://assets/sounds/pressed.wav" type="Sample" id=12]
[ext_resource path="res://assets/sounds/start.wav" type="Sample" id=13]
[ext_resource path="res://assets/sounds/started.wav" type="Sample" id=14]
[ext_resource path="res://main/theme.tres" type="Theme" id=15]
[ext_resource path="res://game/pause_panel.gd" type="Script" id=16]

[sub_resource type="DynamicFont" id=1]

font/size = 14
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 0.490132, 1 )
colors = ColorArray( 0.847656, 0.347672, 0.417982, 0.784314, 0.886719, 0.610702, 0.180115, 0.890028, 0.195312, 0.135803, 0.135803, 1 )

[sub_resource type="ColorRamp" id=3]

offsets = FloatArray( 0, 0.490132, 1 )
colors = ColorArray( 0.351578, 0.847656, 0.347672, 0.784314, 0.886719, 0.610702, 0.180115, 0.890028, 0.195312, 0.135803, 0.135803, 1 )

[sub_resource type="ColorRamp" id=4]

offsets = FloatArray( 0, 0.490132, 1 )
colors = ColorArray( 0.347672, 0.425794, 0.847656, 0.784314, 0.886719, 0.610702, 0.180115, 0.890028, 0.195312, 0.135803, 0.135803, 1 )

[sub_resource type="DynamicFont" id=5]

font/size = 14
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="SampleLibrary" id=6]

samples/asteroid_explode1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/asteroid_explode2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/asteroid_explode3 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/player_explode1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/player_explode2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}
samples/player_explode3 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}
samples/power_up = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}
samples/pressed = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 12 )
}
samples/start = {
"db": -5.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}
samples/started = {
"db": -8.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 14 )
}

[sub_resource type="DynamicFont" id=7]

font/size = 48
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 2 )

[node name="game" type="Node"]

script/script = ExtResource( 1 )

[node name="power_up_container" type="Node" parent="."]

[node name="asteroid_container" type="Node" parent="."]

[node name="countdown_display" type="Container" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 424.0
margin/top = 290.0
margin/right = 856.0
margin/bottom = 314.0
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="countdown_display"]

visibility/opacity = 0.5
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = -64.0
custom_fonts/font = SubResource( 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player_container" type="Node" parent="."]

[node name="explosions_container" type="Node" parent="."]

[node name="spawn_locations" type="Node" parent="."]

editor/display_folded = true

[node name="spawn_1" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 160, 128 )

[node name="spawn_2" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 640, 128 )

[node name="spawn_3" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 1120, 128 )

[node name="spawn_4" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 160, 352 )

[node name="spawn_5" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 1120, 352 )

[node name="spawn_6" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 160, 608 )

[node name="spawn_7" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 640, 608 )

[node name="spawn_8" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 1120, 608 )

[node name="asteroid_explosion" type="Particles2D" parent="."]

transform/pos = Vector2( 64, 64 )
config/amount = 50
config/lifetime = 1.0
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 5, 5 )
config/explosiveness = 0.1
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 75.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 8.0
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 0.5
color/color = Color( 0.47451, 0.337255, 0.211765, 0.501961 )

[node name="player_explosion1" type="Particles2D" parent="."]

transform/pos = Vector2( 352, 64 )
config/amount = 75
config/lifetime = 4.0
config/emit_timeout = 4.0
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 5, 5 )
config/explosiveness = 0.1
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 100.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 5.0
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 1.0
color/color = Color( 0.996094, 0.996094, 0.996094, 0.501961 )
color/color_ramp = SubResource( 2 )

[node name="player_explosion2" type="Particles2D" parent="."]

transform/pos = Vector2( 256, 64 )
config/amount = 75
config/lifetime = 4.0
config/emit_timeout = 4.0
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 5, 5 )
config/explosiveness = 0.1
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 100.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 5.0
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 1.0
color/color = Color( 0.996094, 0.996094, 0.996094, 0.501961 )
color/color_ramp = SubResource( 3 )

[node name="player_explosion3" type="Particles2D" parent="."]

transform/pos = Vector2( 160, 64 )
config/amount = 75
config/lifetime = 4.0
config/emit_timeout = 4.0
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 5, 5 )
config/explosiveness = 0.1
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 100.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 5.0
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 1.0
color/color = Color( 0.996094, 0.996094, 0.996094, 0.501961 )
color/color_ramp = SubResource( 4 )

[node name="safe_zone" type="Sprite" parent="."]

visibility/opacity = 0.0
transform/pos = Vector2( 640, 368 )
texture = ExtResource( 3 )
modulate = Color( 0.203584, 0.847656, 0.149002, 1 )

[node name="hud" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="stage_display" type="Container" parent="hud"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 16.0
margin/right = 248.0
margin/bottom = 40.0
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="hud/stage_display"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = SubResource( 5 )
text = "STAGE: 1"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="health_display" type="Container" parent="hud"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 524.0
margin/top = 16.0
margin/right = 756.0
margin/bottom = 40.0
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="hud/health_display"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = SubResource( 5 )
text = "SHIELDS: 100"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel" type="Panel" parent="hud/health_display"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 26.0
margin/right = 232.0
margin/bottom = 31.0

[node name="shield_bar" type="TextureProgress" parent="hud/health_display"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 26.0
margin/right = 0.0
margin/bottom = -7.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = true
texture/under = null
texture/over = null
texture/progress = ExtResource( 4 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="score_display" type="Container" parent="hud"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1024.0
margin/top = 16.0
margin/right = 1256.0
margin/bottom = 40.0
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="hud/score_display"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = SubResource( 5 )
text = "SCORE: 0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sample_player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 6 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="countdown_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="pause_panel" type="Panel" parent="."]

process/pause_mode = 2
editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.95
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 15 )
margin/left = 390.0
margin/top = 250.0
margin/right = 890.0
margin/bottom = 470.0
script/script = ExtResource( 16 )

[node name="paused" type="Label" parent="pause_panel"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 40.0
margin/right = 0.0
margin/bottom = 102.0
custom_fonts/font = SubResource( 7 )
text = "PAUSED"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="quit_to_menu" type="Button" parent="pause_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = 136.0
margin/right = 235.0
margin/bottom = 188.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "QUIT TO MENU"
flat = false

[node name="continue_game" type="Button" parent="pause_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 265.0
margin/top = 136.0
margin/right = 475.0
margin/bottom = 188.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "CONTINUE"
flat = false


